--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,11 @@ dependencies:
   http: ^1.1.0
   provider: ^6.0.5
   intl: ^0.18.1
+  cached_network_image: ^3.3.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 dev_dependencies:
+  build_runner: ^2.1.0
   flutter_test:
     sdk: flutter
 
